# oddAGN

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/3-modeling/: 3.01-jacc-residence-timescales.ipynb  3.02-jacc-smbhb-merger-rate.ipynb  3.03-jacc-dual-agn-model.ipynb
oddagn/: __init__.py  config.py  dataset.py  dual_agn_models.py  evolution_rates.py  features.py  galaxy_models.py  galaxy_properties.py  plots.py  scaling_relations.py  smbh_evolution.py  smbhb_models.py  utilities.py
oddagn/modeling/: predict.py  train.py
